--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ header {
 }
 .arrow {
   width: 2.5rem;
-  margin-top: 10vh;
+  margin-top: 5vh;
 }
 
 section {
@@ -142,6 +142,9 @@ footer {
   }
   h1 {
     font-size: 5rem;
+  }
+  .arrow {
+    margin-top: 10vh;
   }
   .column {
     width: 48%;
